--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <script>
-    const AS_URL_BASE = "";
+    const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbxtdnfGGFU4PY0B3Aze6OaHXAvEv974ASxLtu3qq3IpcbCpWHKvZSKrTYQh_0aMWnnCoA/exec";
     
     var url = document.location.href;
     var k = url.substr(url.lastIndexOf("k=")+2);
